# invest-contest

./: .env.example  .gitignore  Makefile  app.py  pyproject.toml  requirements.txt
instance/: db.sqlite
server/: app.py  config.py  environments.py  fill_db.py  models.py  services.py
server/source/: README.md
server/source/CUR_1/indicator1_model/: fingerprint.pb  saved_model.pb
server/source/CUR_1/indicator2_model/: fingerprint.pb  saved_model.pb
server/source/CUR_10/indicator37_model/: fingerprint.pb  saved_model.pb
server/source/CUR_10/indicator38_model/: fingerprint.pb  saved_model.pb
server/source/CUR_11/indicator39_model/: fingerprint.pb  saved_model.pb
server/source/CUR_11/indicator40_model/: fingerprint.pb  saved_model.pb
server/source/CUR_11/indicator41_model/: fingerprint.pb  saved_model.pb
server/source/CUR_11/indicator42_model/: fingerprint.pb  saved_model.pb
server/source/CUR_11/indicator43_model/: fingerprint.pb  saved_model.pb
server/source/CUR_11/indicator44_model/: fingerprint.pb  saved_model.pb
server/source/CUR_12/indicator45_model/: fingerprint.pb  saved_model.pb
server/source/CUR_15/indicator47_model/: fingerprint.pb  saved_model.pb
server/static/css/: banner.css  description.css  fonts.css  footer.css  header.css  index.css  results.css  stage-1.css  stage-3.css
server/templates/: index.html  predict.html
server/templates/includes/: _description.html  _header.html  _results.html  _stage-4.html
train_models/: README.md  constants.py  parse.py  test.py  train.py
train_models/data/: .~lock.data.xlsx#  data.xlsx
(+142 files in other folders)
